--- a/main.css
+++ b/main.css
@@ -1,28 +1,50 @@
+body {
+background-color: gray;
+
+}
+
 h1 {
   color: blue;
   margin: auto;
   text-align: center;
 	font-size: 50px;
+	font-variant: small-caps;
 }
+
+#scoreboard	{
+	margin: auto;
+	font-weight: bold;
+}
+
+#scoreboard h3, #scoreboard p {
+	text-align: center;
+}
+
+#scoreboard p {
+}
+
 
 #board {
   border: 3px solid black;
-  width: 546px;
-  height: 546px;
+  width: 471px;
+  height: 471px;
   margin: auto;
+  background-color: black;
+  border-radius: 10px;
 }
 
 #board > div {
   color: white;
   font-weight: bold;
-  font-size: 100px;
-  line-height: 178px;
+  font-size: 75px;
+  line-height: 153px;
   float: left;
-  width: 178px;
-  height: 178px;
+  width: 153px;
+  height: 153px;
   background-color: blue;
   margin: 2px;
   text-align: center;
+  border-radius: 5px;
 }
 
 button {
